@@ -256,3 +256,5 @@ Fixes:
     * Ecore-X: Fix selection parser to not overrun buffer read by using longs on 64bit.
     * Evas: Fix recursive proxy image rendering to just render black
     * Evas textblock: Fixed line size calculation when using multiple fonts.
+    * Evas: Fix the proxy object to not be clipped by source clipper.
+
